# aioconsole

./: README.md  example.py  format-code.py  pyproject.toml
docs/en/: index.md
pyaioconsole/app/: __init__.py  config.py
